--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "pm2 start server.js --name Bot --restart-delay=3000 && pm2 logs Bot --lines 1",
-        "stop": "pm2 stop Bot",
-        "restart": "pm2 restart Bot --restart-delay=3000 && pm2 logs Bot --lines 1"
-    },
-    "dependencies": {
-        "discord.js": "^13.8.1"
-    }
+  "name": "token",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "discord.js": "^14.7.0",
+    "express": "^4.18.2",
+    "open": "^8.4.0",
+    "web3": "^1.8.1"
+  }
 }
